# file_explorer

./: .gitignore  Cargo.toml  README.md
src/: main  main.rs  structs.rs
xml_config/: main.glade  main2.glade
