[package]
name = "file_explorer"
version = "0.1.0"
authors = ["bconn98 <brc5229@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.0"
features = ["v2_44"]
